syntax = "proto3";

package trpc.examples.demo;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc TestSelfProtocol(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
   string msg = 1;
}

message HelloReply {
   string msg = 1;
}